test/coder/error/divide-by-0.pt
using output;
// parantheses required to specify field width instead of substring
put((1/0):1);
putln;
